[package]
name = "rtmp"
version = "0.4.1"
edition = "2018"

[dependencies]
byteorder = "1.4.2"
bytes = "1.0.0"
rand = "0.8.5"
failure = "0.1.8"
hmac = "0.12.1"
sha2 = "0.10.8"
# uuid = { version = "0.6.5", features = ["v4"] }
log = "0.4"
chrono = "0.4"
indexmap = "2.6.0"
async-trait = "0.1.70"
hex = "0.4"
serde_json = { version = "1", default-features = false, features = [
    "alloc",
    "raw_value",
    "std",
] }
serde = { version = "1.0", features = ["derive", "rc"] }

bytesio = { path = "../../library/bytesio/" }
streamhub = { path = "../../library/streamhub/" }
h264-decoder = { path = "../../library/codec/h264/" }
xflv = { path = "../../library/container/flv/" }
commonlib = { path = "../../library/common/" }

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]
